...
            android:text="Add Task"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#0B0706"
            android:text="Settings"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/allTasks"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toEndOf="@+id/addTask" />

...
